--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Skill</a></li>
             </ul>
         </nav>
     </header>
@@ -114,10 +115,10 @@
             </form>
         </div>
     </section>
-
+  
     <!-- Footer -->
     <footer class="bg-blue-600 text-white text-center p-4">
-        <p>&copy; 2024 Sumaiya Islam. All rights reserved.</p>
+        <p>&copy; 2024 Sanjida . All rights reserved.</p>
     </footer>
 
 </body>
